[gd_scene load_steps=12 format=3 uid="uid://b4simh6wp2nhu"]

[ext_resource type="Script" uid="uid://ue07arp3gth2" path="res://Scenes/ui/character_selector.gd" id="1_swd7w"]
[ext_resource type="Texture2D" uid="uid://cqcal03735mv8" path="res://art/tile_0118.png" id="2_1dyil"]
[ext_resource type="Resource" uid="uid://u3sa2j38l167" path="res://Scenes/run/run_startup.tres" id="2_3mm8h"]
[ext_resource type="Texture2D" uid="uid://pgj8vfpj6tc5" path="res://art/tile_0130.png" id="3_swd7w"]
[ext_resource type="Texture2D" uid="uid://bfvi02kojsa00" path="res://art/tile_0103.png" id="4_3mm8h"]
[ext_resource type="Texture2D" uid="uid://cpydvk8mq66o5" path="res://art/tile_0087.png" id="4_ryseg"]

[sub_resource type="Gradient" id="Gradient_ll7s5"]
colors = PackedColorArray(0.591579, 0.373389, 0.111849, 1, 0.0744457, 0.0744457, 0.0744457, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_7b74l"]
gradient = SubResource("Gradient_ll7s5")
width = 50

[sub_resource type="LabelSettings" id="LabelSettings_ajqjj"]
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.239216)
shadow_offset = Vector2(4.79, 2.565)

[sub_resource type="LabelSettings" id="LabelSettings_1owf8"]
font_size = 12
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.239216)
shadow_offset = Vector2(4.79, 2.565)

[sub_resource type="ButtonGroup" id="ButtonGroup_7c3m5"]

[node name="CharacterSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_swd7w")
run_startup = ExtResource("2_3mm8h")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_7b74l")

[node name="Title" type="Label" parent="."]
layout_mode = 1
offset_right = 96.0
offset_bottom = 22.0
text = "选择角色"
label_settings = SubResource("LabelSettings_ajqjj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -76.0
offset_right = -6.0
offset_bottom = 48.0
grow_horizontal = 0

[node name="CharName" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "战士"
label_settings = SubResource("LabelSettings_ajqjj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "喜欢切东西"
label_settings = SubResource("LabelSettings_1owf8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -88.0
offset_right = 64.0
offset_bottom = -28.0
grow_vertical = 0
texture = ExtResource("4_ryseg")
expand_mode = 1
stretch_mode = 5

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -62.0
offset_top = -29.0
offset_right = -12.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 9
disabled = true
text = "开始"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -15.0
offset_right = 83.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="WarriorButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_7c3m5")

[node name="Icon" type="TextureRect" parent="HBoxContainer/WarriorButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_1dyil")
expand_mode = 1
stretch_mode = 5

[node name="WizarButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_7c3m5")

[node name="Icon" type="TextureRect" parent="HBoxContainer/WizarButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_swd7w")
expand_mode = 1
stretch_mode = 5

[node name="AssassinButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_7c3m5")

[node name="Icon" type="TextureRect" parent="HBoxContainer/AssassinButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_3mm8h")
expand_mode = 1
stretch_mode = 5

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="HBoxContainer/WarriorButton" to="." method="_on_warrior_button_pressed"]
[connection signal="pressed" from="HBoxContainer/WizarButton" to="." method="_on_wizar_button_pressed"]
[connection signal="pressed" from="HBoxContainer/AssassinButton" to="." method="_on_assassin_button_pressed"]
